--- a/tests/index.html
+++ b/tests/index.html
@@ -13,8 +13,9 @@
 
     <script src="chai.js"></script>
     <script src="mocha.js"></script>
-    <script src="../temperatura.js"></script>
-    <script>mocha.setup('tdd')</script>
+    <script src="blanket.js" data-cover-adapter="mocha-blanket.js"></script>
+    <script src="../temperature.js"></script>
+    <script>mocha.setup('bdd')</script>
     <script src="tests.js"></script>
 
     <script>
