--- a/tests/test_blanket.html
+++ b/tests/test_blanket.html
@@ -12,7 +12,7 @@
   <script src="mocha.js"></script>
   <script src="chai.js"></script>
   <script src="blanket.js" data-cover-adapter="mocha-blanket.js"></script>
-  <script src="../temperature.js" data-cover></script>
+  <script src="../temperatura.js" data-cover></script>
   <script>mocha.setup('bdd')</script>
   <script src="tests.js"></script>
   <script>mocha.run();</script>
