--- a/tests/index.html
+++ b/tests/index.html
@@ -14,7 +14,7 @@
     <script src="chai.js"></script>
     <script src="mocha.js"></script>
     <script src="blanket.js" data-cover-adapter="mocha-blanket.js"></script>
-    <script src="../temperature.js"></script>
+    <script src="../temperatura.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="tests.js"></script>
 
